--- a/main.css
+++ b/main.css
@@ -142,9 +142,8 @@ span{
     width:400px;
     
 }
-video{
+.video{
     background-color:rgba(255, 255, 255, 0.6);
-    width:300px;
     margin:50px 0px 0px 0px;
     width:370px;
     height:300px;
